# LR2ArenaEx

./: .gitignore  Dockerfile  LR2ArenaEx.sln  README.md  docker-compose.yml
.gitea/workflows/: build-container.yml
LR2ArenaEx/: LR2ArenaEx.vcxproj  LR2ArenaEx.vcxproj.filters
LR2ArenaEx/include/: Garnet.h  MinHook.h
LR2ArenaEx/include/Garnet/: Garnet.cpp  Garnet.h
LR2ArenaEx/include/ImGui/: ImGuiFileDialogConfig.h  ImGuiNotify.hpp
LR2ArenaEx/libs/: garnet.lib  garnet_debug.lib  libMinHook.lib  sqlite3.lib
LR2ArenaEx/src/: dllmain.cpp
LR2ArenaEx/src/client/: client.cpp  client.h
LR2ArenaEx/src/config/: config.cpp  config.h
LR2ArenaEx/src/gui/: graph.cpp  graph.h  gui.cpp  gui.h  imguistyle.cpp  imguistyle.h  items.cpp  items.h  itemsettings.cpp  itemsettings.h  mainwindow.cpp  mainwindow.h  widgets.cpp  widgets.h
LR2ArenaEx/src/hooks/: cstr.h  currentnotes.cpp  currentnotes.h  fmod.cpp  fmod.h  hooks.cpp  hooks.h  loadingdone.cpp  loadingdone.h  maniac.cpp  maniac.h  maxscore.cpp  maxscore.h  midi.cpp  midi.h  pacemaker.cpp  pacemaker.h  random.cpp  random.h  returnmenu.cpp  returnmenu.h  score.cpp  score.h  selectbms.cpp  selectbms.h  selectscene.cpp  selectscene.h
LR2ArenaEx/src/network/: enums.h  structs.h
LR2ArenaEx/src/overlay/: dinputhook.cpp  dinputhook.h  dx9hook.cpp  dx9hook.h  overlay.cpp  overlay.h
LR2ArenaEx/src/server/: server.cpp  server.h
LR2ArenaEx/src/utils/: keys.cpp  keys.h  mem.cpp  mem.h  misc.cpp  misc.h  msgpack_utils.h
LR2ArenaEx/standalone/: CMakeLists.txt  README.md  server.cpp
Launcher/: Launcher.vcxproj  Launcher.vcxproj.filters
Launcher/src/: Injector.cpp  LaunchGame.cpp  Launcher.cpp
